Agregando nuevos estilos al index.html

--- a/index.html
+++ b/index.html
@@ -7,8 +7,12 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Esta es la página de inicio madafaker</h1>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. A laboriosam temporibus numquam harum explicabo consequuntur alias cum facere nobis maiores ex tempora voluptate eveniet veritatis sunt, laudantium totam unde in?</p>
-    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Temporibus quasi, ipsam qui voluptatibus aperiam assumenda cum nisi deserunt consequatur fugiat aliquid, ut sapiente excepturi laboriosam repellendus, rerum quam et corporis?</p>
+    <div id="container">
+        <div id="post">
+            <h1>Esta es la página de inicio madafaker</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. A laboriosam temporibus numquam harum explicabo consequuntur alias cum facere nobis maiores ex tempora voluptate eveniet veritatis sunt, laudantium totam unde in?</p>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Temporibus quasi, ipsam qui voluptatibus aperiam assumenda cum nisi deserunt consequatur fugiat aliquid, ut sapiente excepturi laboriosam repellendus, rerum quam et corporis?</p>
+        </div>
+    </div>
 </body>
 </html>
