--- a/index.html
+++ b/index.html
@@ -8,11 +8,12 @@
 </head>
 <body>
     <div id="container">
+        <div id="cabecera">
+           HyperBlog 
+           <span id="tagline"> Tu blog de confianza</span>
+        </div>
         <div id="post">
             <h1>Esta es la página de inicio madafaker</h1>
-                <div id="cabecera">
-                   <h3> <u>Esta es la versión de la rama cabecera</u> </h3> 
-                </div>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. A laboriosam temporibus numquam harum explicabo consequuntur alias cum facere nobis maiores ex tempora voluptate eveniet veritatis sunt, laudantium totam unde in?</p>
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Temporibus quasi, ipsam qui voluptatibus aperiam assumenda cum nisi deserunt consequatur fugiat aliquid, ut sapiente excepturi laboriosam repellendus, rerum quam et corporis?</p>
         </div>
