--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div id="container">
         <div id="cabecera">
            HyperBlog 
-           <span id="tagline"> Tu blog de cabecera</span>
+           <span id="tagline"> Tu blog de historia</span>
         </div>
         <div id="post">
             <h1>Esta es la página de inicio madafaker</h1>
