--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
            <span id="tagline">Tu Pagina de cabecera</span>
         </div>
         <div id="post">
-            <h1>Esta es la página de inicio madafaker</h1>
+            <h1>Esta es la página de inicio ಠ_ಠ</h1>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. A laboriosam temporibus numquam harum explicabo consequuntur alias cum facere nobis maiores ex tempora voluptate eveniet veritatis sunt, laudantium totam unde in?</p>
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Temporibus quasi, ipsam qui voluptatibus aperiam assumenda cum nisi deserunt consequatur fugiat aliquid, ut sapiente excepturi laboriosam repellendus, rerum quam et corporis?</p>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt cumque incidunt fuga asperiores earum veritatis perferendis reprehenderit, animi repudiandae nulla placeat voluptas impedit, excepturi quaerat! Fuga pariatur voluptates suscipit officia.</p>
