--- a/index.html
+++ b/index.html
@@ -10,16 +10,12 @@
     <div id="container">
         <div id="cabecera">
            HyperBlog 
-           <span id="tagline">Tu Pagina de cabecera</span>
+           <span id="tagline">Tu Pagina de cabecera 2.0</span>
         </div>
         <div id="post">
             <h1>Esta es la página de inicio ಠ_ಠ</h1>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. A laboriosam temporibus numquam harum explicabo consequuntur alias cum facere nobis maiores ex tempora voluptate eveniet veritatis sunt, laudantium totam unde in?</p>
-            ('💨')
-            ('💩')
-            ('💪')
-            ('💫')
-            ('💬')
+            ('💨') ('💩') ('💪') ('💫') ('💬')
             <p> <u>Suscribete y dale Like!</u> </p>
         </div>
     </div>
