--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div id="container">
         <div id="cabecera">
            HyperBlog 
-           <span id="tagline">Tu Pagina de cabecera 2.0</span>
+           <span id="tagline">Tu Pagina de cabecera</span>
         </div>
         <div id="post">
             <h1>Esta es la página de inicio ಠ_ಠ</h1>
