--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <div id="container">
         <div id="cabecera">
+            <img id="logo" src="images/lol.png" alt="">
            HyperBlog 
            <span id="tagline">Tu Pagina de cabecera</span>
         </div>
