--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div id="container">
         <div id="cabecera">
             <img id="logo" src="images/lol.png" alt="">
-            <img id="logo" src="images/mano.png" alt="">
+            <!-- <img id="logo" src="images/mano.png" alt=""> -->
            HyperBlog 
            <span id="tagline">Tu Pagina de cabecera</span>
         </div>
